add tailwind and configure

--- a/chaiaurDjango/templates/website/index.html
+++ b/chaiaurDjango/templates/website/index.html
@@ -5,5 +5,8 @@ Home page
 {% endblock %}
 
 {% block content %}
-<h1>Welcome to the home page</h1>
+<h1 class="bg-orange-500">Welcome to the home page</h1>
+<p class="text-center bg-red-500">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum sint quis voluptates esse hic, quisquam ducimus amet exercitationem? Tempore reprehenderit qui minus accusantium quia! Quaerat doloribus maxime porro officia temporibus!
+</p>
 {% endblock %}
