--- a/chaiaurDjango/chai/templates/chai/all_chai.html
+++ b/chaiaurDjango/chai/templates/chai/all_chai.html
@@ -6,4 +6,24 @@ Home page
 
 {% block content %}
 <h1>Welcome to the home page|all_chai</h1>
+
+<div class="grid grid-cols-3 gap-4 m-4">
+
+    
+    {% for chai in chais %}
+    
+    <div class='bg-blue-800 rounded-md shadow-lg p-5'>
+        <img class="rounded" src="{{chai.image.url}}" alt="">
+        <h3 class="text-2xl font-bold">{{chai.name}}</h3>
+        <a href="{% url 'chai_detail' chai.id %}">
+            <button
+            class="bg-orange-500 mt-5 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+            >
+                {{chai.type}} - {{chai.id}}
+            </button>
+        </a>
+    </div>
+    
+    {% endfor %}
+</div>
 {% endblock %}
