--- a/chaiheadq/tweet/templates/tweet_list.html
+++ b/chaiheadq/tweet/templates/tweet_list.html
@@ -12,14 +12,16 @@ Chai aur tweet
 <div class="container row gap-3">
   {% for tweet in tweets %}
   <div class="card" style="width: 18rem">
-    <img src="{{tweet.photo.url}}" class="card-img-top" alt="..." />
+    <img src="{{tweet.photo.url}}" class="card-img-top" alt="Nothing to show here" />
     <div class="card-body">
       <h5 class="card-title">{{tweet.user.username}}</h5>
       <p class="card-text">
         {{tweet.text}}
       </p>
+      {% if tweet.user == user %}
       <a href="{% url 'tweet_edit' tweet.id %}" class="btn btn-primary">Edit</a>
       <a href="{% url 'tweet_delete' tweet.id %}" class="btn btn-danger">Delete</a>
+      {% endif %}
     </div>
   </div>
   {% endfor %}
